Fixed bug whereby navbar was cutting off modal (z-index was set to 5000!?), and added a few small QOL changes to the html / css code

--- a/public/CSS/liststyles.css
+++ b/public/CSS/liststyles.css
@@ -25,7 +25,7 @@ body {
     width: 100%;
     top: 0;
     position: fixed;
-    z-index: 50000;
+    /*z-index: 50000;*/
 }
 
 .logo {
